# Intrinsic-Resonance-Holography-

./: .gitignore  AGENT_HANDOFF.md  AGENT_HANDOFF_V16.md  CITATION.cff  CONTRIBUTING.md  GRAND_AUDIT_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_v13.md  IMPLEMENTATION_STATUS_v11.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_MAIN.md  INSTALL.md  IRH20.3.md  IRH_Computational_Verification(2).ipynb  IRH_v11_IMPLEMENTATION_SUMMARY.md  Irh62_verification.ipynb  MAIN_README.md  NEXT_AGENT_PROMPT.md  ORCHESTRATOR_README.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_FINAL_REPORT.md  PHASE_1_STATUS.md  PHASE_2_STATUS.md  QUICK_REFERENCE.md  README.md  README_v13.md  README_v9.5_old.md  REQUIREMENTS_VERIFICATION.md  SESSION_UPDATE.md  TERMINOLOGY_UPDATE_v10.0.md  Untitled16.ipynb  Validating Intrinsic Resonance Holography.txt  changelog.md  config.json  environment.yml  fty.txt  install.bat  install.sh  irh_wolfram_kernel.wls  main.py  (+15 more)
.github/: copilot-instructions.md
.github/agents/: PHASE_2_QUANTUM_EMERGENCE.md  PHASE_3_GENERAL_RELATIVITY.md  PHASE_4_GAUGE_GROUP.md  PHASE_5_FERMION_GENERATIONS.md  PHASE_6_COSMOLOGICAL_CONSTANT.md  PHASE_7_EXASCALE_INFRASTRUCTURE.md  PHASE_8_FINAL_VALIDATION.md  ROADMAP.md  error-eating-agent.agent.md  my-agent.agent.md
.github/workflows/: ci-cd.yml  ci.yml
archive/: README_OLD.md
benchmarks/: exascale_benchmark.py
checkpoints/: phase2_demo_rank0.pkl
config/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  Conceptual_Lexicon.md  Final_Manuscript_v9.5.md  HarmonyOptimizer_Numerical_Methods.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_QUICK_REFERENCE.md  PHASE_2_README.md  REPLICATION_GUIDE.md  STRUCTURE_v13.md  V16_STATUS.md  v16_ARCHITECTURE.md  v16_IMPLEMENTATION_ROADMAP.md  v16_IMPLEMENTATION_SUMMARY.md  v18_IMPLEMENTATION_PLAN.md
docs/api/: README.md
docs/derivations/: Quantum_Emergence.md  SOTE_Derivation.md
docs/manuscripts/: AnalyticalIRHRefined.md  IRH18.md  IRH20.3_traceability.md  IRH_v13_0_Theory.md  IRHv15.md  IRHv16.md  IRHv16_Supplementary_Vol_1-5.md  IRHv17  IRHv17.md  IRHv18.md  IntrinsicResonanceHolography-v13.md
docs/mathematical_proofs/: 01_ontological_foundations.md  02_dimensional_bootstrap.md  03_quantum_emergence.md  04_gauge_uniqueness.md  05_k_theory_generations.md  06_cosmological_constant.md
docs/status/: RIGOR_ENHANCEMENTS_SUMMARY.md
examples/: basic_example.wl  minimal_aro_demo.py  phase2_quantum_emergence_demo.py  reproduce_paper_table_1.py  rigor_enhancements_demo.py
examples/v16/: 01_ahs_demo.md
experiments/: COSMIC_FIXED_POINT_ANALYSIS.md  cosmic_fixed_point_results_N300_iter500.json  cosmic_fixed_point_summary_N300_iter500.md  cosmic_fixed_point_test.py  plot_robustness.py  run_emergence.py  validation_suite.py
experiments/dimensional_bootstrap/: run_stability_analysis.py
latest source updates/: 2maximumTOE.txt  IRGclaudeMAXTOE.txt  README.md  claudesuprevew1.txt  claudeswutc1.txt
legacy/: README.md
misc/: README.md
notebooks/: 01_ARO_Demo.ipynb  01_v57_D4_substrate.ipynb  02_Dimensional_Bootstrap.ipynb  03_Fine_Structure_Derivation.ipynb  03_particle_sector.ipynb  04_Dark_Energy_w(a).ipynb  05_Spinning_Wave_Patterns.ipynb  05b_exascale_ml.ipynb  06_Grand_Audit.ipynb  07_IRH_v16_Demo.ipynb  08_IRH_v17_RG_Flow.ipynb  09_IRH_v17_Spectral_Dimension.ipynb  10_IRH_v17_Constants_Derivation.ipynb  IRH_v18_Development_Colab.ipynb  IRH_v18_Full_Install_Colab.ipynb  IRH_v18_Quickstart_Colab.ipynb  README.md  Welcome_To_Colab.ipynb
old/: README.md
output/: irh20_3_discrepancies.md  irh20_3_results.json  irh20_3_results_20251213_110018.json
python/: benchmarks.py  requirements.txt  setup.py  test_ahs_standalone.py
python/tests/: test_irh.py
scripts/: irh_wolfram_kernel.wls  main.wl  main_cli_backup.py  run_enhanced_grand_audit.py  run_full_grand_audit.py
src/: AROEngine.wl  Acceptance.wl  ConstantDerivation.wl  EigenSpectrum.wl  GaugeGroupAnalysis.wl  GrandAudit.wl  GraphState.wl  HAGOEngine.wl  HarmonyFunctional.wl  IOFunctions.wl  InterferenceMatrix.wl  Logging.wl  LorentzSignature.wl  MutateGraph.wl  ParameterController.wl  ScalingFlows.wl  SpectralDimension.wl  Visualization.wl
src/cncg/: __init__.py  action.py  analysis.py  flow.py  spectral.py  vis.py
src/core/: __init__.py  acw_v16.py  ahs_v15.py  ahs_v16.py  aro.py  aro_optimizer.py  aro_v11.py  gtec.py  harmony.py  matter.py  ncgg.py  quantum_v11.py  rigor_enhancements.py  sote_v11.py  spacetime.py  substrate_v11.py  unitary_evolution.py
src/cosmology/: __init__.py  dark_energy.py  vacuum_energy.py
src/irh_v10/: __init__.py
src/metrics/: __init__.py  dimensions.py
src/numerics/: __init__.py  certified_numerics.py  error_tracking.py  precision_constants.py
src/parallel/: __init__.py  distributed_eigen.py  gpu_kernels.py  mpi_aro.py
src/physics/: __init__.py  einstein_equations.py  fermion_masses.py  quantum_emergence.py  spacetime_emergence.py
src/predictions/: __init__.py  cosmology.py  fine_structure.py
src/simulations/: __init__.py  dimensional_bootstrap.py  (+2 more)
tests/: test_action.py  test_alpha_derivation.py  test_axioms.py  test_derivations.py  test_harmony_functional.py  test_main.py  test_quantum_emergence.py  test_rigor_enhancements.py  test_three_generations.py  test_v15_ahs.py  test_v15_cosmology.py  test_v15_exascale.py  test_v15_fermion_generations.py  test_v15_fine_structure.py  test_v15_harmony.py  test_v15_phase3_gr.py  test_v15_phase4_gauge.py  test_v15_phase8_validation.py  test_v15_quantum_emergence.py  test_v15_unitary_evolution.py  test_v16_core.py  test_v16_numerics.py  unit_tests.wl
webapp/: BACKEND_STATUS.md  GEMINI_FRONTEND_PROMPT.md  INFRASTRUCTURE_SUMMARY.md  INSTALLATION.md  QUICKSTART.md  QUICKSTART_FULLSTACK.md  README.md  SETUP_GUIDE.md  __init__.py  example_api_client.py  start_backend.sh  start_frontend.sh  start_server.py  streamlit_v17.py  verify_infrastructure.py
(+152 files in other folders)
