[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cncg"
version = "14.0.0"
description = "Computational Non-Commutative Geometry: Spontaneous Emergence of Four Dimensions"
readme = "README.md"
authors = [
    {name = "Brandon D. McCrary", email = "independent@researcher.org"}
]
license = {text = "CC0 1.0 Universal"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["non-commutative geometry", "spectral action", "quantum gravity", "theoretical physics"]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "numba>=0.54.0",
    "h5py>=3.0.0",
    "matplotlib>=3.4.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/dragonspider1991/Intrinsic-Resonance-Holography-"
Repository = "https://github.com/dragonspider1991/Intrinsic-Resonance-Holography-"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
